# boardlib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/boardlib/: __init__.py  board.py  exceptions.py  stone.py
tests/: test_board.py  test_stone.py
