[project]
name = "boardlib"
version = "0.1.0"
description = "by asdfkim"
license = { text = "MIT" }
authors = [
    { name = "asdfkim" }
]

requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boardlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/boardlib"]
